# HopSolutions

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
api/: filters.py  open_api.py  serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
static/css/: main.css
static/js/: calendar-1.js  main.js
subtasks/: admin.py  apps.py  models.py  urls.py  views.py
subtasks/migrations/: 0001_initial.py  0002_initial.py  0002_subtask_slug.py  0003_alter_subtask_slug.py  0003_initial.py  0004_remove_subtask_slug.py
tags/: admin.py  apps.py  models.py  urls.py  views.py
tags/migrations/: 0001_initial.py  0002_alter_tag_tasks.py  0002_initial.py  0003_alter_tag_tasks.py  0004_alter_tag_name.py  0005_tag_slug.py  0006_alter_tag_slug.py  0007_remove_tag_tasks.py  0008_remove_tag_slug.py
task_calendar/: apps.py  urls.py  views.py
tasks/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py  widgets.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_comment_task_user.py  0003_remove_task_description_alter_task_slug.py  0004_rename_comment_task_description_alter_category_slug.py  0005_alter_task_category.py  0006_category_user.py  0007_remove_task_parent_subtask.py  0008_task_tags.py  0009_alter_category_slug_alter_task_slug.py
tasks/templatetags/: admin_tags.py  (+1 more)
templates/: base.html  help.html
tests/: conftest.py  test_subtasks.py  test_tags.py  test_task_detail.py  test_tasks.py  test_users.py
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+38 files in other folders)
